// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Alert > Snapshot > matches snapshot for default variant 1`] = `
<div
  class="rounded-lg border p-md bg-[hsl(var(--tm-muted))] border-[hsl(var(--tm-border-default))] text-[hsl(var(--tm-text-primary))]"
  role="alert"
>
  Default Alert
</div>
`;

exports[`Alert > Snapshot > matches snapshot for destructive variant 1`] = `
<div
  class="rounded-lg border p-md bg-[hsl(var(--tm-destructive))]/10 border-[hsl(var(--tm-destructive))]/20 text-[hsl(var(--tm-destructive-foreground))]"
  role="alert"
>
  Destructive Alert
</div>
`;

exports[`Alert > Snapshot > matches snapshot for primary variant 1`] = `
<div
  class="rounded-lg border p-md bg-[hsl(var(--tm-primary))]/10 border-[hsl(var(--tm-primary))]/20 text-[hsl(var(--tm-primary-foreground))]"
  role="alert"
>
  Primary Alert
</div>
`;
